# quoteflow

./: .gitignore  README.ko.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
benchmarks/: benchmark.py
docs/: README.md  api.md  examples.md  getting-started.md  releasing.md
docs/en/: README.md  api.md  examples.md  getting-started.md  releasing.md
docs/ko/: README.md  api.md  examples.md  getting-started.md  releasing.md
examples/: plot_market_heatmap.py
orderwave/: __init__.py  _engine.py  _realism.py  book.py  config.py  history.py  market.py  metrics.py  model.py  utils.py  validation.py  visualization.py
orderwave/_model/: __init__.py  backstop.py  events.py  latent.py  samplers.py  scoring.py  types.py
orderwave/_validation/: __init__.py  baseline.py  decision.py  invariants.py  metrics.py  path_metrics.py  perf.py  pipeline.py  reporting.py  reproducibility.py  run.py  sensitivity.py  shared.py  single_run.py  summaries.py  tasks.py
scripts/: _docs_plots.py  measure_performance.py  profile_realism.py  render_doc_images.py  validate_optimization.py  validate_orderwave.py
tests/: _realism_cache.py  test_backstop.py  test_book.py  test_book_cache.py  test_engine.py  test_event_history.py  test_invariants.py  test_market.py  test_market_core.py  test_model_events.py  test_model_latent.py  test_model_samplers.py  test_model_scoring.py  test_rank_structure.py  test_realism.py  test_reproducibility.py  test_shock_resilience.py  test_validation.py  test_visualization.py
tests/golden/: validation_baseline.json  validation_release_baseline.json
