[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderwave"
version = "0.2.0"
description = "An order-flow-driven synthetic market simulator."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["order-book", "market-simulation", "microstructure", "synthetic-data", "finance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.urls]
Homepage = "https://github.com/smturtle2/quoteflow"
Documentation = "https://github.com/smturtle2/quoteflow/tree/main/docs"
Repository = "https://github.com/smturtle2/quoteflow"
Issues = "https://github.com/smturtle2/quoteflow/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["orderwave*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
