[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderwave"
version = "0.4.11"
description = "An order-flow-driven synthetic market simulator."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["order-book", "market-simulation", "microstructure", "synthetic-data", "finance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.urls]
Homepage = "https://github.com/smturtle2/quoteflow"
Documentation = "https://github.com/smturtle2/quoteflow/tree/main/docs/en"
Repository = "https://github.com/smturtle2/quoteflow"
Issues = "https://github.com/smturtle2/quoteflow/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "psutil>=6.0",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["orderwave*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I"]

[tool.mypy]
python_version = "3.11"
files = [
  "orderwave/__init__.py",
  "orderwave/market.py",
  "orderwave/_engine.py",
  "orderwave/_model/events.py",
  "orderwave/model.py",
]
follow_imports = "skip"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
